--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ function search() {
 </script>
 <div class="main_container"><div class="search-box">
 <form onsubmit="search();return false;"><label for="search-box">Search: </label>
-<input type="text" id="search-box"></form>
+<input type="text" id="search-box"></form></div>
 <h1>x86 Instruction Set Reference</h1>
 <p><b>Disclaimer:</b> This page has been preserved from <i>siyobik.com</i>. If you want
 to contribute to this site, have a look at <a href="https://github.com/rjeschke/x86.renejeschke.de">GitHub</a></p>
