--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 <script type="text/javascript">
 function search() {
-    var pattern = $('#search-box').val();
+    var pattern = $('#goto-box').val();
     var cmds = $('td').children('a');
     var rg = new RegExp(pattern,'gi');
 
@@ -30,9 +30,9 @@ function search() {
     alert("Opcode \""+pattern+"\" not found!");
 }
 </script>
-<div class="main_container"><div class="search-box">
-<form onsubmit="search();return false;"><label for="search-box">Search: </label>
-<input type="text" id="search-box"></form></div>
+<div class="main_container"><div class="goto-box">
+<form onsubmit="search();return false;"><label for="goto-box">Goto: </label>
+<input type="text" id="goto-box"></form></div>
 <h1>x86 Instruction Set Reference</h1>
 <p><b>Disclaimer:</b> This page has been preserved from <i>siyobik.com</i>. If you want
 to contribute to this site, have a look at <a href="https://github.com/rjeschke/x86.renejeschke.de">GitHub</a></p>
