--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@ function search() {
     alert("Opcode \""+pattern+"\" not found!");
 }
 </script>
-<div class="main_container"><div class="goto-box">
+<div class="goto-box">
 <form onsubmit="search();return false;"><label for="goto-box">Goto: </label>
 <input type="text" id="goto-box"></form></div>
+<div class="main_container">
 <object>
 <table class="box" id="instruction_set_reference_main_entries">
 <tr>
